[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_resolver = "0.2.0"
serde = {version = "1.0.188", features=["rc"]}
serde_json = "1.0.107"
swc = "0.266.20"
swc_common = {version = "0.32.1", features = ["tty-emitter"]}
swc_core =  { version = "0.83.22", features = [
  "allocator_node",
  "ecma_ast",
  "ecma_codegen",
  "ecma_ast_serde",
  "common_concurrent",
  "bundler",
  "ecma_loader",
  "ecma_transforms",
  "ecma_visit",
  "ecma_parser",
  "base_node",
  "base_concurrent"
] }
swc_ecmascript = { version = "0.234.16", features = ["transforms", "visit", "parser"] }
